--- a/K8S/Manifests/ingress-nginx.yaml
+++ b/K8S/Manifests/ingress-nginx.yaml
@@ -7,6 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: letsencrypt
+    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    #nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   tls:
     - hosts:
