--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -26,7 +26,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  MSDO:
+  security:
     # currently only windows latest is supported
     runs-on: windows-latest
     continue-on-error: false
@@ -40,9 +40,14 @@ jobs:
         dotnet-version: |
           5.0.x
           6.0.x
+          
     - name: Run Microsoft Security DevOps
       uses: microsoft/security-devops-action@v1.6.0
+      continue-on-error: false
       id: msdo
+      with:
+        categories: 'IaC'        
+      
     - name: Upload results to Security tab
       uses: github/codeql-action/upload-sarif@v2
       with:
