--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -45,8 +45,8 @@ jobs:
       uses: microsoft/security-devops-action@v1.6.0
       continue-on-error: true
       id: msdo
-      with:
-        categories: 'IaC'        
+      #with:
+      #  categories: 'IaC'        
       
     - name: Upload results to Security tab
       uses: github/codeql-action/upload-sarif@v2
