--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -13,6 +13,10 @@ env:
     param-template: main.bicepparam
     context: Azure-Shared-DevOps
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   plan:
     runs-on: ubuntu-latest
