working folder fix.

--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -11,7 +11,7 @@ env:
     rg-location: westeurope
     main-template: main.bicep
     param-template: main.bicepparam
-    context: Azure-Shared-DevOps
+    context: Bicep/Azure-Shared-DevOps
 
 permissions:
   id-token: write
