--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -40,10 +40,10 @@ jobs:
         with:
           inlineScript: az bicep build --file ${{ env.context }}/${{ env.main-template }}
     
-      - name: Run Validate on Bicep Templates
-        working-directory: ${{ env.context }}
-        run: |
-          az deployment group validate --template-file ${{ env.main-template }} --parameters ${{ env.param-template }} --resource-group ${{ env.rg-name }}
+      # - name: Run Validate on Bicep Templates
+      #   working-directory: ${{ env.context }}
+      #   run: |
+      #     az deployment group validate --template-file ${{ env.main-template }} --parameters ${{ env.param-template }} --resource-group ${{ env.rg-name }}
 
       - name: Run What If on Bicep Templates
         working-directory: ${{ env.context }}
