--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -39,10 +39,13 @@ jobs:
         run: |
           az bicep build --file ${{ env.context }}/${{ env.main-template }}
     
-      # - name: Run Validate on Bicep Templates
-      #   working-directory: ${{ env.context }}
-      #   run: |
-      #     az deployment group validate --template-file ${{ env.main-template }} --parameters ${{ env.param-template }} --resource-group ${{ env.rg-name }}
+      - name: Run Validate on Bicep Templates
+        working-directory: ${{ env.context }}
+        run: |
+          az deployment group validate \
+          --template-file ${{ env.main-template }} \
+          --parameters ${{ env.param-template }} \
+          --resource-group ${{ env.rg-name }}
 
       - name: Run What If on Bicep Templates
         working-directory: ${{ env.context }}
@@ -54,6 +57,7 @@ jobs:
           
       - name: Create String Output
         id: whatif-string
+        working-directory: ${{ env.context }}
         run: |
           WHATIF=$(cat whatif)
           
