--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -20,6 +20,7 @@ permissions:
 
 jobs:
   plan:
+    name: Plan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -88,3 +89,31 @@ jobs:
                   repo: context.repo.repo,
                   body: body
               })
+  deploy:
+    name: Deploy
+    needs: plan
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
+      # - name: Deploy Resource Group        
+      #   working-directory: ${{ env.context }}
+      #   run: |
+      #     az group create --name ${{ env.rg-name }}  --location ${{ env.rg-location }}
+      
+      # - name: Deploy Bicep Templates
+      #   working-directory: ${{ env.context }}
+      #   run: |
+      #     az deployment group create \
+      #     --template-file ${{ env.main-template }} \
+      #     --parameters ${{ env.param-template }} \
+      #     --resource-group ${{ env.rg-name }}
