--- a/.github/workflows/azure-shared-devops.yml
+++ b/.github/workflows/azure-shared-devops.yml
@@ -22,6 +22,7 @@ jobs:
   plan:
     name: Plan
     runs-on: ubuntu-latest
+    environment: VS-FTE
     steps:
       - uses: actions/checkout@v3
       
@@ -93,6 +94,7 @@ jobs:
     name: Deploy
     needs: plan
     runs-on: ubuntu-latest
+    environment: VS-FTE
     if: github.ref == 'refs/heads/master'
     
     steps:
