--- a/.github/workflows/azure-shared-services.yml
+++ b/.github/workflows/azure-shared-services.yml
@@ -3,9 +3,14 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'Bicep/Azure-Shared-Services/**'
   pull_request:
     branches:
       - master
+    paths:
+      - 'Bicep/Azure-Shared-Services/**'
+      
 env:
     rg-name: JPRG-ALZ-Shared
     rg-location: northeurope
