--- a/.github/workflows/azure-devops-agents.yml
+++ b/.github/workflows/azure-devops-agents.yml
@@ -3,25 +3,27 @@ on:
   push:
     branches:
       - master
-    paths: 
+    paths:
       - 'Docker/**'
   pull_request:
     branches:
       - master
-    paths: 
+    paths:
       - 'Docker/**'
 env:
-  context: Docker  
-  dockerfile-location: 'AzDevOps/Dockerfile'
-  image-tag: 'devops/ado-agent'
+  context: Docker
+  linux-dockerfile-location: 'ADO/Linux/Dockerfile'
+  windows-dockerfile-location: 'ADO/Windows/Dockerfile'
+  linux-image-tag: 'devops/ado-agent-linux'
+  windows-image-tag: 'devops/ado-agent-windows'
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build-push-ado:
-    name: Build and Push ADO Agent to Azure Container Registry
+  build-push-ado-linux:
+    name: Build and Push ADO Linux Agent to Azure Container Registry
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -40,12 +42,42 @@ jobs:
       - name: Build the Docker image
         run: |
           cd ${{ env.context }}
-          docker build -f ${{ env.dockerfile-location }} \
-          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.image-tag }}:$GITHUB_RUN_ID \
-          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.image-tag }}:latest .
+          docker build -f ${{ env.linux-dockerfile-location }} \
+          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.linux-image-tag }}:$GITHUB_RUN_ID \
+          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.linux-image-tag }}:latest .
 
       - name: Push the Docker image
         if: github.ref == 'refs/heads/master'
         run: |
-          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.image-tag }}:$GITHUB_RUN_ID
-          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.image-tag }}:latest
+          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.linux-image-tag }}:$GITHUB_RUN_ID
+          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.linux-image-tag }}:latest
+
+  build-push-ado-windows:
+    name: Build and Push ADO Windows Agent to Azure Container Registry
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Azure ACR Login
+        run: |
+          az acr login -n ${{ secrets.AZURE_ACR_NAME }}
+
+      - name: Build the Docker image
+        run: |
+          cd ${{ env.context }}
+          docker build -f ${{ env.windows-dockerfile-location }} \
+          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.windows-image-tag }}:$GITHUB_RUN_ID \
+          -t ${{ secrets.AZURE_ACR_NAME }}/${{ env.windows-image-tag }}:latest .
+
+      - name: Push the Docker image
+        if: github.ref == 'refs/heads/master'
+        run: |
+          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.windows-image-tag }}:$GITHUB_RUN_ID
+          docker push ${{ secrets.AZURE_ACR_NAME }}/${{ env.windows-image-tag }}:latest
