--- a/.github/workflows/azure-devops-agents.yml
+++ b/.github/workflows/azure-devops-agents.yml
@@ -10,6 +10,8 @@ on:
       - master
     paths:
       - 'Docker/**'
+  workflow_dispatch:
+
 env:
   context: Docker
   linux-dockerfile-location: 'ADO/Linux/Dockerfile'
