Update sw-rest API image version to 0.0.2 in deployment configuration

--- a/K8S/application-templates/dotnet-graphql-rest-apis/sw-rest.yaml
+++ b/K8S/application-templates/dotnet-graphql-rest-apis/sw-rest.yaml
@@ -26,7 +26,7 @@ spec:
       automountServiceAccountToken: false
       containers:
         - name: sw-restapi
-          image: ghcr.io/goncalvesj/sw-rest:0.0.1
+          image: ghcr.io/goncalvesj/application-templates/sw-rest:0.0.2
           imagePullPolicy: Always
           securityContext:
             allowPrivilegeEscalation: false
